--- a/index.html
+++ b/index.html
@@ -6,66 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tradutor de Idiomas Simples</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<!--esses são os  metadados-->
 </head>
 <body>
     <div class="container">
         <h1>Translator Project</h1>
         <div class="content">
             <div class="divSelects">
-              <select class="selectFrom"></select>
-              <button id="swap-languages-button">Mudar idioma</button>
-              <select class="selectTo"></select>
+              <select class="selectFrom"></select> <!--as caixas de selecao-->
+              <button id="swap-languages-button"> <i class="fas fa-arrows-alt-h"></i> <!-- Ícone de seta interligada --></button>
+              <select class="selectTo"></select> <!--as caixas de selecao-->
             </div>
+
            <div class="divTextareas">
-  <textarea id="textareaFrom" rows="8" placeholder="Digite seu texto"></textarea>
-  <button id="btn-ouvir1">ouvir</button>
+
+            <textarea id="textareaFrom" rows="8" placeholder="Digite seu texto"></textarea>
+            <button id="btn-ouvir1">
+              <i class="fas fa-volume-up"></i> </button>
+
   <textarea id="textareaTo" rows="8" placeholder="Tradução" disabled></textarea>
-  <button id="btn-ouvir2">ouvir</button>
+  <button id="btn-ouvir2">
+    <i class="fas fa-volume-up"></i></button>
+
 </div>
             <button id="btnTranslate">TRADUZIR</button>
-            
           </div>
         </div>
-    <script src="Tradutor.js"></script>
-    <!-- 31/07/23 ver com Mona para que fique em baixo E nao do lado direito
-        <footer>
-        <p>Copyright &copy; 2023 Site de Edson. Todos os direitos reservados.</p>
-        <p>Termos de uso | Política de privacidade</p>
-        <p>
-            <a href="https://www.instagram.com/edsonshine_/">Instagram</a> |
-            <a href="https://github.com/EdsonSoma">Github</a> |
-            <a href="https://www.linkedin.com/in/edson-germano-323104209/">Linkedin</a> |
-        </p>
-    </footer> -->
+    <script src="Tradutor.js"></script> <!-- essa linha linka com javascript,nao pode ficar com os metadados la em cima-->
 </body>
 </html>
-
-
-
-<!-- codigo antigo para talvez revizar e apagar <div class="content">
-    <label for="select-from">Idioma de Origem:</label>
-    <select class="selectFrom" id="select-from">
-    </select>
-    <label for="select-to">Idioma de Destino:</label>
-    <select class="selectTo" id="select-to">
-    </select>
-    <div class="input-group">
-        <label for="input-text">Texto a ser traduzido:</label>
-        <textarea id="input-text" placeholder="Digite seu texto aqui" rows="3"></textarea>
-    </div>
-    <div class="input-group">
-        <label for="output-text">Texto traduzido:</label>
-        <textarea id="output-text" rows="3" placeholder="Digite seu texto aqui" readonly></textarea>
-    </div>
-    <button id="translate-btn">Traduzir</button>
-</div>
-<footer>
-    <p>Copyright &copy; 2023 Site de Edson. Todos os direitos reservados.</p>
-    <p>Termos de uso | Política de privacidade</p>
-    <p>
-        <a href="https://www.instagram.com/edsonshine_/">Instagram</a> |
-        <a href="https://github.com/EdsonSoma">Github</a> |
-        <a href="https://www.linkedin.com/in/edson-germano-323104209/">Linkedin</a> |
-    </p>
-</footer> -->
+  
+<!-- icones >>>>
+    <i class="fas fa-microphone"></i>   Ícone de microfone
+<i class="fas fa-arrows-alt-h"></i>     Ícone de seta interligada
+<i class="fas fa-volume-up"></i>     Ícone de viva-voz -->
