--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <!--esses são os  metadados-->
+    <!--esses são os metadados-->
   </head>
   <body>
     <div class="container">
       <h1>Translator Project</h1>
+      <br>
+      <!--titulo do projeto-->
       <div class="content">
         <div class="divSelects">
           <select class="selectFrom"></select>
@@ -36,10 +38,11 @@
           <button id="btn-ouvir1">
             <i class="fas fa-volume-up"></i>
           </button>
+          <!--botao de ouvir-->
           <button id="btn-microphone">
             <i class="fa-solid fa-microphone"></i>
           </button>
-
+          <!--botao de gravar-->
           <textarea
             id="textareaTo"
             rows="8"
@@ -48,6 +51,7 @@
           ></textarea>
           <button id="btn-ouvir2">
             <i class="fas fa-volume-up"></i>
+            <!--botao de ouvir-->
           </button>
         </div>
         <button id="btnTranslate">TRADUZIR</button>
@@ -57,10 +61,3 @@
     <!-- essa linha ela linka com javascript,nao pode ficar com esse metadados la em cima so aqui-->
   </body>
 </html>
-
-<!-- 
-1 colocar pronuncia
-2 colocar funcionabilidade no microfone
-3 botao de detectar Idiomas ao lado do placeholder1 
-4 talvez teclado virtual
-5 corrigir a responsividade no  -->
