--- a/index.html
+++ b/index.html
@@ -59,5 +59,14 @@
     </div>
     <script src="Tradutor.js"></script>
     <!-- essa linha ela linka com javascript,nao pode ficar com esse metadados la em cima so aqui-->
+    <footer>
+      <p>Copyright &copy; 2023 Site de Edson. Todos os direitos reservados.</p>
+      <p>Termos de uso | Política de privacidade</p>
+      <p>
+          <a href="https://www.instagram.com/edsonshine_/">Instagram</a> |
+          <a href="https://github.com/EdsonSoma">Github</a> |
+          <a href="https://www.linkedin.com/in/edson-germano-323104209/">Linkedin</a> |
+      </p>
+  </footer>
   </body>
 </html>
